# SimpleAFS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  cacheclr.sh  filebench.sh  grpc_setup.cmake  microvarmail.f  run.sh  server.sh  test.sh
afs/: afs.pb.go  afs.proto  afs_grpc.pb.go  macdeps.sh  setup.sh
afs/cpp/: Makefile  afs.grpc.pb.h  afs.pb.h  afs.proto  afs_client.cc  afs_server.cc
bench/: filebench_afs.txt  hosts  hosts2  leveldb_nums  setup.sh
bench/consistency_tests/: prob.conf  prob.py  rpc_latency.py  test2_clientB.py  test3_clientA.py  test4_clientA.py  test5_clientA.py  test5_clientB.py
bench/durability_tests/: alice.sh  reorder.conf  reorder.py  txn_reorder.conf  txn_reorder.py
bench/filebench_workloads/: build.sh  filemicro_create.f  filemicro_createfiles.f  filemicro_createrand.f  filemicro_delete.f  filemicro_rread.f  filemicro_rwritedsync.f  filemicro_seqread.f  filemicro_seqwrite.f  filemicro_statfile.f  filemicro_writefsync.f  fileserver.f  mongo.f  test.c  test.sh  varmail.f  webserver.f  xtract_syscalls.py
unreliablefs/: CMakeLists.txt  afs_client.cpp  afs_client.h  afs_fuse_ops.cpp  afs_fuse_ops.h  afs_server.cpp  alice.cpp  alice.h  common.h  unreliablefs.c  unreliablefs.h  unreliablefs_errinj.c  unreliablefs_errinj.h  unreliablefs_ops.c
